--- a/firebase.json
+++ b/firebase.json
@@ -1,5 +1,9 @@
 {
   "hosting": {
     "source": "."
+  },
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
   }
 }
